--- a/Pipfile
+++ b/Pipfile
@@ -9,4 +9,5 @@ verify_ssl = true
 gsutil = "*"
 
 [requires]
-python_version = "2.7"
+# VM we use has python 2.7 & 3.4.3 & I'd rather use python 3 but 3.4 won't build on my laptop
+python_version = "3.5"
