--- a/Pipfile
+++ b/Pipfile
@@ -6,7 +6,11 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-gsutil = "*"
+gsutil = "5.16"
+python-dotenv = "0.21.0"
 
 [requires]
 python_version = "3.9.15"
+
+[scripts]
+test =  "python -m unittest -v test/test.py"
