restructure, improve tests, add coverage

--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+coverage = "*"
 
 [packages]
 gsutil = "5.16"
@@ -13,4 +14,6 @@ python-dotenv = "0.21.0"
 python_version = "3.9.15"
 
 [scripts]
+coverage = "coverage run -m unittest -v test/test.py "
 test =  "python -m unittest -v test/test.py"
+report = "coverage report --omit test/*"
