initial workinig try at auto-downloading course JSON, ref #10

--- a/reminders/example.env
+++ b/reminders/example.env
@@ -1,5 +1,6 @@
 # DEBUG=True
 SMTP_DOMAIN=smtp.mailgun.org
 SMTP_PORT=587
-SMTP_USER= user@example.com
+SMTP_USER=user@example.com
 SMTP_PASSWORD=secret
+BUCKET_NAME=google_storage_bucket
