--- a/Pipfile
+++ b/Pipfile
@@ -7,14 +7,15 @@ verify_ssl = true
 coverage = "*"
 
 [packages]
-gsutil = "*"
 python-dotenv = "0.21.0"
 google-cloud-storage = "*"
+coverage = "~=7.1"
+pytest = "~=7.1"
 
 [requires]
 python_version = "3.9.15"
 
 [scripts]
-coverage = "coverage run -m unittest -v test/test.py "
-test =  "python -m unittest -v test/test.py"
+coverage = "coverage run -m pytest"
+test =  "python -m pytest"
 report = "coverage report --omit test/*"
