--- a/Pipfile
+++ b/Pipfile
@@ -18,4 +18,4 @@ python_version = "3.9.15"
 [scripts]
 coverage = "coverage run -m pytest"
 test =  "python -m pytest"
-report = "coverage report --omit test/*"
+report = "coverage report --omit test/*,reminders/usernames.py,reminders/__init__.py"
