--- a/Pipfile
+++ b/Pipfile
@@ -7,8 +7,8 @@ verify_ssl = true
 coverage = "*"
 
 [packages]
-python-dotenv = "0.21.0"
-google-cloud-storage = "*"
+python-dotenv = "~=1.0"
+google-cloud-storage = "~=2.7"
 coverage = "~=7.1"
 pytest = "~=7.1"
 
