--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,9 @@ coverage = "*"
 
 [packages]
 python-dotenv = "~=1.0"
-google-cloud-storage = "~=2.14"
+google-cloud-storage = "==2.16.0"
 coverage = "~=7.4"
-pytest = "==8.1.1"
+pytest = "==8.2.1"
 openpyxl = "==3.1.2"
 
 [requires]
