--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-coverage = "*"
+coverage = "~=7.4"
+pytest = "~=8.3"
 
 [packages]
+google-cloud-storage = "==2.18.2"
+openpyxl = "==3.1.5"
 python-dotenv = "~=1.0"
-google-cloud-storage = "==2.16.0"
-coverage = "~=7.4"
-pytest = "==8.2.1"
-openpyxl = "==3.1.2"
 
 [requires]
 python_version = "3.11"
