--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,13 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "google-cloud-storage==3.1.0",
+    "google-cloud-storage==3.3",
     "openpyxl==3.1.5",
-    "python-dotenv~=1.1",
+    "python-dotenv==1.1.1",
 ]
 
 [dependency-groups]
 dev = [
-    "coverage~=7.8",
-    "pytest~=8.3",
+    "coverage==7.10.6",
+    "pytest==8.4.1",
 ]
