--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,8 @@ dependencies = [
 [dependency-groups]
 dev = [
     "coverage==7.13.1",
-    "pytest==8.4.2",
+    "pytest==9.0.2",
 ]
+
+[tool.pytest]
+pythonpath = [".", "reminders"]
